# wedding-system

./: TASK.md
backend/: .env.example  .env.test  .gitignore  .sequelizerc  CLAUDE.md  LOGGING_AND_SOFT_DELETES.md  nodemon.json  package-lock.json  package.json  server.js  server.ts  tsconfig.json
backend-rust/: .gitignore  CLAUDE.md  Cargo.toml
backend-rust/src/: database.rs  main.rs
backend/config/: database.js  database.ts  errors.js  errors.ts
backend/controllers/: adminController.ts  messageController.js  messageController.ts  photoController.js  photoController.ts  rsvpController.js  rsvpController.ts  weddingController.js  weddingController.ts
backend/middleware/: auth.ts  upload.js  upload.ts  validation.js  validation.ts
backend/migrations/: 20240902000001-create-wedding.js  20240902000002-create-rsvp.js  20240902000003-create-message.js  20240902000004-create-photo.js  20240902000005-add-soft-deletes.js  20240902000006-create-audit-log.js
backend/models/: auditLog.ts  index.js  index.ts  message.js  message.ts  photo.js  photo.ts  rsvp.js  rsvp.ts  wedding.js  wedding.ts
backend/routes/: admin.js  admin.ts  message.js  message.ts  photo.ts  rsvp.js  rsvp.ts  wedding.js  wedding.ts
backend/seeders/: 20240902000001-demo-wedding.js
backend/sequelize-conf/: database.js
backend/uploads/: .gitkeep
backend/utils/: apiError.js  apiError.ts  logger.ts  responseHandler.js  responseHandler.ts
frontend/: CLAUDE.md  package-lock.json  package.json
frontend/components/: admin-dashboard.tsx  guest-messages.tsx  photo-upload.tsx  rsvp-form.tsx
(+8 files in other folders)
